Websites Complete (more or less)

--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
         </div>
 
         <nav>
-            <a href="/home">Home</a>
-            <a href="/about">About</a>
-            <a href="/contact">Contact</a>
-            <a href="https://example.com" target="_blank">External Link</a>
+            <a href="https://shadow-draconic-development.github.io/.github/" target="_blank">Shadow Draconic Development Main Page</a>
+            <a href="/city.html">Weather Location Settings Generator</a>
         </nav>
 
         <form id="settingsForm">
@@ -102,27 +100,27 @@
         <!-- JavaScript file references -->
         <script
             type="module"
-            src="/Data/website/scripts/windScript.js"
+            src="/Data/website/scripts/weatherGen/windScript.js"
         ></script>
         <script
             type="module"
-            src="/Data/website/scripts/waterScript.js"
+            src="/Data/website/scripts/weatherGen/waterScript.js"
         ></script>
         <script
             type="module"
-            src="/Data/website/scripts/tempScript.js"
+            src="/Data/website/scripts/weatherGen/tempScript.js"
         ></script>
         <script
             type="module"
-            src="/Data/website/scripts/seasonUrlScript.js"
+            src="/Data/website/scripts/weatherGen/seasonUrlScript.js"
         ></script>
         <script
             type="module"
-            src="/Data/website/scripts/colorScript.js"
+            src="/Data/website/scripts/weatherGen/colorScript.js"
         ></script>
         <script
             type="module"
-            src="/Data/website/scripts/generateJson.js"
+            src="/Data/website/scripts/weatherGen/generateJson.js"
         ></script>
         <script
             type="module"
