Linked to main github

--- a/city.html
+++ b/city.html
@@ -26,6 +26,7 @@
         <nav>
             <a href="https://shadow-draconic-development.github.io/.github/" target="_blank">Shadow Draconic Development Main Page</a>
             <a href="/index.html">Weather General Settings Generator</a>
+            <a href="https://github.com/Shadow-Draconic-Development/Weather-Management-System---Redux" target="_blank">GitHub</a>
         </nav>
 
         <form id="settingsForm">
