--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link
             rel="stylesheet"
             type="text/css"
-            href="Data/website/styles.css"
+            href="/Data/website/styles.css"
         />
 
         <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Shadow-Draconic-Development/.github/main/assets/icon.ico">
@@ -16,7 +16,7 @@
         <div class="header-container">
             <h1>Weather General Settings Generator</h1>
             <img
-                src="Data/images/main.png"
+                src="/Data/images/main.png"
                 alt="Logo"
                 width="10%"
                 style="min-width: 70px"
@@ -25,7 +25,7 @@
 
         <nav>
             <a href="https://shadow-draconic-development.github.io/.github/" target="_blank">Shadow Draconic Development Main Page</a>
-            <a href="city.html">Weather Location Settings Generator</a>
+            <a href="/city.html">Weather Location Settings Generator</a>
             <a href="https://github.com/Shadow-Draconic-Development/Weather-Management-System---Redux" target="_blank">GitHub</a>
         </nav>
 
@@ -101,31 +101,31 @@
         <!-- JavaScript file references -->
         <script
             type="module"
-            src="Data/website/scripts/weatherGen/windScript.js"
+            src="/Data/website/scripts/weatherGen/windScript.js"
         ></script>
         <script
             type="module"
-            src="Data/website/scripts/weatherGen/waterScript.js"
+            src="/Data/website/scripts/weatherGen/waterScript.js"
         ></script>
         <script
             type="module"
-            src="Data/website/scripts/weatherGen/tempScript.js"
+            src="/Data/website/scripts/weatherGen/tempScript.js"
         ></script>
         <script
             type="module"
-            src="Data/website/scripts/weatherGen/seasonUrlScript.js"
+            src="/Data/website/scripts/weatherGen/seasonUrlScript.js"
         ></script>
         <script
             type="module"
-            src="Data/website/scripts/weatherGen/colorScript.js"
+            src="/Data/website/scripts/weatherGen/colorScript.js"
         ></script>
         <script
             type="module"
-            src="Data/website/scripts/weatherGen/generateJson.js"
+            src="/Data/website/scripts/weatherGen/generateJson.js"
         ></script>
         <script
             type="module"
-            src="Data/website/scripts/generalScripts.js"
+            src="/Data/website/scripts/generalScripts.js"
         ></script>
     </body>
 </html>
